--- a/WpfGitTest2/MainWindow.xaml
+++ b/WpfGitTest2/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Label x:Name="label" Content="kennismaken met Git" HorizontalAlignment="Left" Margin="172,60,0,0" VerticalAlignment="Top" Width="170"/>
+
     </Grid>
 </Window>
