--- a/WpfGitTest2/MainWindow.xaml
+++ b/WpfGitTest2/MainWindow.xaml
@@ -7,7 +7,9 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Label x:Name="label" Content="kennismaken met Git" HorizontalAlignment="Left" Margin="172,60,0,0" VerticalAlignment="Top" Width="170"/>
+        <Label x:Name="label" Content="kennismaken met Git" HorizontalAlignment="Left" Margin="148,60,0,0" VerticalAlignment="Top" Width="170"/>
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="193,91,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
+        <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="154" Margin="122,128,0,0" VerticalAlignment="Top" Width="228"/>
 
     </Grid>
 </Window>
